# kinetic-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: linters.yml  tests.yml
agents/: cherry_pick.yaml  context_compressor.yaml  critic.yaml  editor.yaml  jira_all_assigned_fetcher.yaml  jira_details_fetcher.yaml  jira_fetcher.yaml  jira_linked_prs_fetcher.yaml  jira_list_summarizer.yaml  jira_project_details_fetcher.yaml  jira_summarizer.yaml  pr_combiner.yaml  pr_diff_fetcher.yaml  pr_fetcher.yaml  pr_metadata_fetcher.yaml  pr_reviewer.yaml  researcher.yaml  writer.yaml
docs/: architecture.md  user-guide.md
docs/design/: graph-workflows.md
examples/: graph_intent_router.yaml  iterative_writing.yaml  jira_project_summary.yaml  jira_summary.yaml  mcp_demo.yaml  my_jira_summary.yaml  parallel_then_sequential_workflow.yaml  parallel_workflow.yaml  pr_review_composed.yaml  react_jira_analyzer.yaml  react_pr_reviewer.yaml  react_research.yaml  search_and_refine.yaml
schemas/: README.md  workflow.schema.json
src/: lib.rs  main.rs
src/adk/: agent.rs  error.rs  gemini.rs  mod.rs  model.rs  tool.rs
src/adk/agent/: llm.rs  mod.rs  react.rs
src/adk/model/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/kinetic/: mod.rs
src/kinetic/mcp/: manager.rs  mod.rs  tool.rs
src/kinetic/server/: mod.rs
src/kinetic/tools/: github.rs  jira.rs  mod.rs  search.rs
src/kinetic/workflow/: agent_factory.rs  builder.rs  loader.rs  mod.rs  registry.rs  (+1 more)
tests/: integration_tests.rs
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts
(+14 files in other folders)
