[package]
name = "kinetic-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "process"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
schemars = "0.8" # For tool schema generation if needed
uuid = { version = "1.7", features = ["v4"] }
dotenv = "0.15"
octocrab = "0.48.1"
url = "2.5.7"
chrono = "0.4.42"
rmcp = { version = "0.10.0", features = ["client", "transport-child-process"] }
once_cell = "1.19"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
